--- a/Style/index.css
+++ b/Style/index.css
@@ -11,6 +11,19 @@
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
+p {
+  font-size: 1.8rem;
+  margin-left: 20%;
+  margin-right: 20%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  color: #5e0e0e;
+  font-size: 3rem;
+  margin-bottom: 5rem;
+}
+
 .firstNavigation {
   position: absolute;
   margin-right: 35%;
@@ -106,7 +119,7 @@
           justify-content: center;
 }
 
-#backgroundOurCoffees .imageHeader {
+#backgroundOurCoffees img {
   -webkit-filter: opacity(0.9);
           filter: opacity(0.9);
 }
@@ -155,9 +168,22 @@
       -ms-flex-direction: row;
           flex-direction: row;
   background-color: #c4c5c5;
-  width: 100%;
   margin-right: auto;
   margin-left: auto;
+}
+
+.backgroundBody .twoRows .firstRow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .backgroundBody .twoRows .secondRow {
@@ -172,18 +198,5 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-.backgroundBody .twoRows .secondRow p {
-  font-size: 1.8rem;
-  margin-left: 25rem;
-  margin-right: 25rem;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.backgroundBody .twoRows .secondRow h2 {
-  color: #5e0e0e;
-  font-size: 3rem;
-  margin-bottom: 5rem;
 }
 /*# sourceMappingURL=index.css.map */
