--- a/Style/index.css
+++ b/Style/index.css
@@ -83,6 +83,7 @@ p {
 }
 
 .firstNavigation nav ul li a h3 {
+  font-size: 2rem;
   margin-top: 20%;
 }
 
@@ -108,9 +109,33 @@ p {
   list-style-type: none;
 }
 
+.secondNavigation nav ul li :hover {
+  color: red;
+}
+
+.secondNavigation nav ul li :focus {
+  color: white;
+}
+
+.secondNavigation nav ul li :active {
+  border-style: dashed;
+  border-color: rgba(255, 0, 0, 0.781);
+  opacity: 0.5;
+  text-shadow: red;
+}
+
+.secondNavigation nav ul li :target {
+  text-decoration: underline;
+}
+
 .secondNavigation nav ul li a {
   font-size: 2rem;
   text-decoration: none;
+  color: #dcfeff;
+}
+
+.secondNavigation nav ul li a h3 {
+  font-size: 2rem;
 }
 
 #backgroundOurCoffees {
