--- a/Style/index.css
+++ b/Style/index.css
@@ -203,7 +203,8 @@ p {
 }
 
 .backgroundBody .oneRow h2 {
-  text-align: center;
+  text-align: left;
+  font-size: 4rem;
 }
 
 .backgroundBody .twoRows {
