--- a/Style/index.scss
+++ b/Style/index.scss
@@ -156,7 +156,8 @@ p {
       float: right;
     }
     h2 {
-      text-align: center;
+      text-align: left;
+      font-size: 4rem;
     }
   }
   .twoRows {
