--- a/Style/index.scss
+++ b/Style/index.scss
@@ -1,5 +1,6 @@
 $navText: rgb(220, 254, 255);
 $backgroundText: rgb(231, 243, 243);
+$tablet: 1023px;
 
 @mixin row {
   display: flex;
@@ -58,23 +59,34 @@ p {
         @include navPseudo();
         text-align: center;
         margin-left: 8rem;
+        @media (max-width: $tablet) {
+          margin-left: 5rem;
+        }
         list-style-type: none;
         a {
-          font-size: 2rem;
           text-decoration: none;
           color: $navText;
           h1 {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
             font-size: 4rem;
+            @media (max-width: $tablet) {
+              font-size: 2.7rem;
+            }
           }
           h2 {
             font-size: 3rem;
             font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
               "Lucida Sans", Arial, sans-serif;
+            @media (max-width: $tablet) {
+              font-size: 2rem;
+            }
           }
           h3 {
             font-size: 2rem;
             margin-top: 20%;
+            @media (max-width: $tablet) {
+              font-size: 1.5rem;
+            }
           }
         }
       }
@@ -89,8 +101,9 @@ p {
       padding: 2%;
       display: flex;
       flex-direction: row;
+      justify-content: center;
       li {
-        margin-left: 5%;
+        margin-left: 0%;
         margin-right: 7%;
         list-style-type: none;
         @include navPseudo();
@@ -112,26 +125,33 @@ p {
   @include row();
   text-align: right;
   justify-content: right;
+  display: flex;
+
   .textHeader {
-    margin-top: 17%;
+    text-align: center;
+    justify-content: center;
+    @media (max-width: $tablet) {
+      text-align: right;
+      justify-content: right;
+    }
     h1 {
+      margin-top: 20rem;
       font-size: 4.5rem;
       color: $navText;
-      display: block;
-      position: inherit;
-      justify-content: center;
     }
     h2 {
       font-size: 2rem;
       color: $navText;
-      display: block;
       margin-top: 3%;
-      position: inherit;
-      justify-content: center;
+      @media (max-width: $tablet) {
+        font-size: 2rem;
+        margin-top: 3%;
+      }
     }
   }
   img {
-    filter: opacity(0.9);
+    width: 55%;
+    float: right;
   }
 }
 
