--- a/Style/index.css
+++ b/Style/index.css
@@ -25,6 +25,12 @@ p {
   padding: 3%;
 }
 
+@media (max-width: 1023px) {
+  .firstNavigation {
+    display: none;
+  }
+}
+
 .firstNavigation nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -175,17 +181,27 @@ p {
 
 @media (max-width: 1023px) {
   #backgroundOurCoffees .textHeader {
-    text-align: right;
-    -webkit-box-pack: right;
-        -ms-flex-pack: right;
-            justify-content: right;
+    text-align: center;
   }
 }
 
 #backgroundOurCoffees .textHeader h1 {
-  margin-top: 20rem;
+  margin-top: 16%;
   font-size: 4.5rem;
   color: #dcfeff;
+}
+
+@media (max-width: 1023px) {
+  #backgroundOurCoffees .textHeader h1 {
+    margin-top: 13%;
+  }
+}
+
+@media (max-width: 765px) {
+  #backgroundOurCoffees .textHeader h1 {
+    margin-top: 3%;
+    font-size: 2rem;
+  }
 }
 
 #backgroundOurCoffees .textHeader h2 {
@@ -201,9 +217,24 @@ p {
   }
 }
 
+@media (max-width: 765px) {
+  #backgroundOurCoffees .textHeader h2 {
+    font-size: 1.5rem;
+    margin-bottom: 3%;
+  }
+}
+
 #backgroundOurCoffees img {
   width: 55%;
   float: right;
+}
+
+@media (max-width: 765px) {
+  #backgroundOurCoffees img {
+    margin-top: -15%;
+    float: none;
+    width: 100%;
+  }
 }
 
 .backgroundBody {
@@ -258,6 +289,15 @@ p {
   margin-left: auto;
 }
 
+@media (max-width: 765px) {
+  .backgroundBody .twoRows {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 .backgroundBody .twoRows .firstRow {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -283,6 +323,13 @@ p {
   margin-right: 20%;
 }
 
+@media (max-width: 765px) {
+  .backgroundBody .twoRows .firstRow {
+    margin-top: 4%;
+    margin-bottom: 4%;
+  }
+}
+
 .backgroundBody .twoRows .secondRow {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -306,5 +353,12 @@ p {
 .backgroundBody .twoRows .secondRow p {
   margin-left: 20%;
   margin-right: 20%;
+}
+
+@media (max-width: 765px) {
+  .backgroundBody .twoRows .secondRow img {
+    margin: 0 auto;
+    width: 50%;
+  }
 }
 /*# sourceMappingURL=index.css.map */
