--- a/Style/index.scss
+++ b/Style/index.scss
@@ -1,6 +1,7 @@
 $navText: rgb(220, 254, 255);
 $backgroundText: rgb(231, 243, 243);
 $tablet: 1023px;
+$mobile: 765px;
 
 @mixin row {
   display: flex;
@@ -48,6 +49,9 @@ p {
 }
 
 .firstNavigation {
+  @media (max-width: $tablet) {
+    display: none;
+  }
   position: absolute;
   margin-right: 35%;
   width: fit-content;
@@ -126,18 +130,26 @@ p {
   text-align: right;
   justify-content: right;
   display: flex;
+  @media (max-width: $tablet) {
+  }
 
   .textHeader {
     text-align: center;
     justify-content: center;
     @media (max-width: $tablet) {
-      text-align: right;
-      justify-content: right;
+      text-align: center;
     }
     h1 {
-      margin-top: 20rem;
+      margin-top: 16%;
       font-size: 4.5rem;
       color: $navText;
+      @media (max-width: $tablet) {
+        margin-top: 13%;
+      }
+      @media (max-width: $mobile) {
+        margin-top: 3%;
+        font-size: 2rem;
+      }
     }
     h2 {
       font-size: 2rem;
@@ -147,11 +159,20 @@ p {
         font-size: 2rem;
         margin-top: 3%;
       }
+      @media (max-width: $mobile) {
+        font-size: 1.5rem;
+        margin-bottom: 3%;
+      }
     }
   }
   img {
     width: 55%;
     float: right;
+    @media (max-width: $mobile) {
+      margin-top: -15%;
+      float: none;
+      width: 100%;
+    }
   }
 }
 
@@ -186,6 +207,9 @@ p {
     background-color: $backgroundText;
     margin-right: auto;
     margin-left: auto;
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
     .firstRow {
       display: flex;
       flex-direction: column;
@@ -195,6 +219,10 @@ p {
       p {
         margin-left: 20%;
         margin-right: 20%;
+      }
+      @media (max-width: $mobile) {
+        margin-top: 4%;
+        margin-bottom: 4%;
       }
     }
     .secondRow {
@@ -206,6 +234,12 @@ p {
       p {
         margin-left: 20%;
         margin-right: 20%;
+      }
+      @media (max-width: $mobile) {
+        img {
+          margin: 0 auto;
+          width: 50%;
+        }
       }
     }
   }
