--- a/Style/index.css
+++ b/Style/index.css
@@ -111,7 +111,6 @@ p {
 }
 
 .secondNavigation nav ul {
-  padding: 2%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -119,15 +118,16 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  padding: 2.7%;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  overflow: scroll;
 }
 
 .secondNavigation nav ul li {
-  margin-left: 0%;
-  margin-right: 7%;
   list-style-type: none;
+  margin-right: 7%;
 }
 
 .secondNavigation nav ul li :hover {
@@ -146,18 +146,22 @@ p {
 }
 
 .secondNavigation nav ul li a {
-  font-size: 2rem;
   text-decoration: none;
   color: #dcfeff;
 }
 
 .secondNavigation nav ul li a h3 {
+  white-space: nowrap;
   font-size: 2rem;
 }
 
-#backgroundOurCoffees {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
-  background-image: linear-gradient(black, #158ff3);
+@media (max-width: 765px) {
+  .secondNavigation nav ul li a h3 {
+    font-size: 1.7rem;
+  }
+}
+
+.backgroundHeader {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -170,9 +174,11 @@ p {
       -ms-flex-pack: right;
           justify-content: right;
   display: flex;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
+  background-image: linear-gradient(black, #158ff3);
 }
 
-#backgroundOurCoffees .textHeader {
+.backgroundHeader .textHeader {
   text-align: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -180,57 +186,73 @@ p {
 }
 
 @media (max-width: 1023px) {
-  #backgroundOurCoffees .textHeader {
+  .backgroundHeader .textHeader {
     text-align: center;
   }
 }
 
-#backgroundOurCoffees .textHeader h1 {
+.backgroundHeader .textHeader h1 {
   margin-top: 16%;
   font-size: 4.5rem;
   color: #dcfeff;
 }
 
 @media (max-width: 1023px) {
-  #backgroundOurCoffees .textHeader h1 {
+  .backgroundHeader .textHeader h1 {
     margin-top: 13%;
   }
 }
 
 @media (max-width: 765px) {
-  #backgroundOurCoffees .textHeader h1 {
+  .backgroundHeader .textHeader h1 {
     margin-top: 3%;
     font-size: 2rem;
   }
 }
 
-#backgroundOurCoffees .textHeader h2 {
+.backgroundHeader .textHeader h2 {
   font-size: 2rem;
   color: #dcfeff;
   margin-top: 3%;
 }
 
 @media (max-width: 1023px) {
-  #backgroundOurCoffees .textHeader h2 {
+  .backgroundHeader .textHeader h2 {
     font-size: 2rem;
     margin-top: 3%;
   }
 }
 
 @media (max-width: 765px) {
-  #backgroundOurCoffees .textHeader h2 {
+  .backgroundHeader .textHeader h2 {
     font-size: 1.5rem;
     margin-bottom: 3%;
   }
 }
 
-#backgroundOurCoffees img {
+.backgroundHeader .navigationToggle {
+  display: none;
+}
+
+@media (max-width: 1023px) {
+  .backgroundHeader .navigationToggle {
+    margin-top: 3%;
+    margin-left: 3%;
+    position: absolute;
+    display: block;
+    float: left;
+    width: 35px;
+    color: white;
+  }
+}
+
+.backgroundHeader img {
   width: 55%;
   float: right;
 }
 
 @media (max-width: 765px) {
-  #backgroundOurCoffees img {
+  .backgroundHeader img {
     margin-top: -15%;
     float: none;
     width: 100%;
