--- a/Style/index.scss
+++ b/Style/index.scss
@@ -105,7 +105,10 @@ p {
       @include row();
       padding: 2.7%;
       justify-content: center;
-      overflow: scroll;
+      @media (max-width: $mobile) {
+        overflow: scroll;
+        justify-content: left;
+      }
       li {
         list-style-type: none;
         margin-right: 7%;
