Update on 'our Menu'

--- a/Style/index.css
+++ b/Style/index.css
@@ -106,6 +106,33 @@ p {
   }
 }
 
+.mobileNavigation {
+  display: none;
+}
+
+@media (max-width: 765px) {
+  .mobileNavigation {
+    -webkit-transform: translate(-300px, 0);
+            transform: translate(-300px, 0);
+    display: block;
+    position: absolute;
+    background-color: white;
+    padding: 5%;
+    width: 40%;
+    height: auto;
+  }
+  .mobileNavigation nav ul li {
+    list-style-type: none;
+    margin-top: 30%;
+  }
+  .mobileNavigation nav ul li a {
+    text-decoration: none;
+  }
+  .mobileNavigation nav ul li h2 {
+    color: black;
+  }
+}
+
 .secondNavigation nav {
   background-color: #23239c;
 }
@@ -181,16 +208,12 @@ p {
   -webkit-box-pack: right;
       -ms-flex-pack: right;
           justify-content: right;
-  display: flex;
   background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#158ff3));
   background-image: linear-gradient(black, #158ff3);
 }
 
 .backgroundHeader .textHeader {
   text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 @media (max-width: 1023px) {
@@ -201,6 +224,7 @@ p {
 
 .backgroundHeader .textHeader h1 {
   margin-top: 16%;
+  margin-bottom: 1%;
   font-size: 4.5rem;
   color: #dcfeff;
 }
@@ -221,7 +245,7 @@ p {
 .backgroundHeader .textHeader h2 {
   font-size: 2rem;
   color: #dcfeff;
-  margin-top: 3%;
+  margin-top: 0.3%;
 }
 
 @media (max-width: 1023px) {
@@ -238,24 +262,37 @@ p {
   }
 }
 
-.backgroundHeader .navigationToggle {
+.backgroundHeader button {
   display: none;
+  cursor: pointer;
 }
 
 @media (max-width: 1023px) {
-  .backgroundHeader .navigationToggle {
+  .backgroundHeader button {
+    background-color: transparent;
+    border-color: transparent;
     margin-top: 3%;
     margin-left: 3%;
     position: absolute;
     display: block;
     float: left;
-    width: 35px;
+  }
+  .backgroundHeader button .navigationToggle {
+    width: 30px;
     color: white;
   }
 }
 
+.backgroundHeader .ourMenusImage {
+  position: block;
+  margin-left: -40%;
+  width: 100%;
+}
+
 .backgroundHeader img {
-  width: 55%;
+  position: static;
+  width: 60%;
+  height: auto;
   float: right;
 }
 
