--- a/Style/index.css
+++ b/Style/index.css
@@ -223,42 +223,44 @@ p {
 }
 
 .backgroundHeader .textHeader h1 {
-  margin-top: 16%;
+  margin-top: 14%;
   margin-bottom: 1%;
   font-size: 4.5rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #dcfeff;
 }
 
 @media (max-width: 1023px) {
   .backgroundHeader .textHeader h1 {
-    margin-top: 13%;
+    margin-top: 7%;
   }
 }
 
 @media (max-width: 765px) {
   .backgroundHeader .textHeader h1 {
-    margin-top: 3%;
     font-size: 2rem;
+    margin-top: 1%;
   }
 }
 
 .backgroundHeader .textHeader h2 {
   font-size: 2rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   color: #dcfeff;
   margin-top: 0.3%;
 }
 
 @media (max-width: 1023px) {
   .backgroundHeader .textHeader h2 {
-    font-size: 2rem;
-    margin-top: 3%;
+    font-size: 1.5rem;
+    margin-top: 0%;
   }
 }
 
 @media (max-width: 765px) {
   .backgroundHeader .textHeader h2 {
     font-size: 1.5rem;
-    margin-bottom: 3%;
+    margin-bottom: 0.5%;
   }
 }
 
@@ -287,6 +289,13 @@ p {
   position: block;
   margin-left: -40%;
   width: 100%;
+}
+
+@media (max-width: 765px) {
+  .backgroundHeader .ourMenusImage {
+    margin-top: 0%;
+    margin-left: 0%;
+  }
 }
 
 .backgroundHeader img {
