--- a/Style/index.scss
+++ b/Style/index.scss
@@ -168,29 +168,33 @@ p {
       text-align: center;
     }
     h1 {
-      margin-top: 16%;
+      margin-top: 14%;
       margin-bottom: 1%;
       font-size: 4.5rem;
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
       color: $navText;
       @media (max-width: $tablet) {
-        margin-top: 13%;
+        margin-top: 7%;
       }
       @media (max-width: $mobile) {
-        margin-top: 3%;
         font-size: 2rem;
+        margin-top: 1%;
       }
     }
     h2 {
       font-size: 2rem;
+      font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+        "Lucida Sans", Arial, sans-serif;
       color: $navText;
       margin-top: 0.3%;
       @media (max-width: $tablet) {
-        font-size: 2rem;
-        margin-top: 3%;
+        font-size: 1.5rem;
+        margin-top: 0%;
       }
       @media (max-width: $mobile) {
         font-size: 1.5rem;
-        margin-bottom: 3%;
+        margin-bottom: 0.5%;
       }
     }
   }
@@ -215,6 +219,10 @@ p {
     position: block;
     margin-left: -40%;
     width: 100%;
+    @media (max-width: $mobile) {
+      margin-top: 0%;
+      margin-left: 0%;
+    }
   }
   img {
     position: static;
