--- a/Style/index.scss
+++ b/Style/index.scss
@@ -98,7 +98,7 @@ p {
   }
 }
 
-.mobileNavigation {
+#mobileNavigation {
   display: none;
   @media (max-width: $mobile) {
     transform: translate(-300px, 0);
@@ -244,7 +244,7 @@ p {
     text-align: left;
     @include text1();
     background-color: $backgroundText;
-    width: 70%;
+    width: 80%;
     margin-top: 7%;
     margin-right: auto;
     margin-left: auto;
@@ -252,7 +252,7 @@ p {
     p {
       margin-right: 0%;
     }
-    img {
+    .imgText {
       float: right;
       width: 30%;
       margin-left: 4%;
@@ -276,7 +276,31 @@ p {
         font-size: 2rem;
       }
     }
+    .iconsWrapper {
+      @include row();
+      justify-content: center;
+      .iconContainer {
+        margin-right: 5%;
+        margin-left: 5%;
+        text-align: center;
+
+        button {
+          cursor: pointer;
+          background-color: transparent;
+          border-color: transparent;
+          .icon {
+            width: 90px;
+            text-align: center;
+            padding: 20%;
+          }
+          p {
+            justify-content: center;
+          }
+        }
+      }
+    }
   }
+
   .twoRows {
     margin-top: 7%;
     @include row();
