--- a/Style/index.css
+++ b/Style/index.css
@@ -110,20 +110,17 @@ p {
   display: none;
 }
 
-@media (max-width: 765px) {
+@media (max-width: 1023px) {
   #mobileNavigation {
-    -webkit-transform: translate(-300px, 0);
-            transform: translate(-300px, 0);
-    display: block;
     position: absolute;
-    background-color: white;
+    background-color: blue;
     padding: 5%;
-    width: 40%;
+    width: 100%;
     height: auto;
   }
   #mobileNavigation nav ul li {
     list-style-type: none;
-    margin-top: 30%;
+    margin-top: 10%;
   }
   #mobileNavigation nav ul li a {
     text-decoration: none;
@@ -222,6 +219,50 @@ p {
   }
 }
 
+.backgroundHeader .textHeader .navigationToggle {
+  display: none;
+}
+
+@media (max-width: 1023px) {
+  .backgroundHeader .textHeader .navigationToggle {
+    display: inline;
+  }
+}
+
+.backgroundHeader .textHeader button {
+  display: none;
+}
+
+@media (max-width: 1023px) {
+  .backgroundHeader .textHeader button {
+    display: inline;
+    width: 30px;
+    background-color: transparent;
+    border-color: transparent;
+    margin-top: 3%;
+    margin-left: 3%;
+    position: absolute;
+    display: block;
+    float: left;
+  }
+}
+
+.backgroundHeader .textHeader #mobileMenu {
+  display: none;
+  cursor: pointer;
+}
+
+@media (max-width: 1023px) {
+  .backgroundHeader .textHeader #mobileMenu {
+    display: block;
+  }
+}
+
+.backgroundHeader .textHeader #closeMenu {
+  display: none;
+  cursor: pointer;
+}
+
 .backgroundHeader .textHeader h1 {
   margin-top: 14%;
   margin-bottom: 1%;
@@ -261,27 +302,6 @@ p {
   .backgroundHeader .textHeader h2 {
     font-size: 1.5rem;
     margin-bottom: 0.5%;
-  }
-}
-
-.backgroundHeader button {
-  display: none;
-  cursor: pointer;
-}
-
-@media (max-width: 1023px) {
-  .backgroundHeader button {
-    background-color: transparent;
-    border-color: transparent;
-    margin-top: 3%;
-    margin-left: 3%;
-    position: absolute;
-    display: block;
-    float: left;
-  }
-  .backgroundHeader button .navigationToggle {
-    width: 30px;
-    color: white;
   }
 }
 
